--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@
 }
 
 @utility input-field{
-  @apply px-3 py-1.5 border border-grey-500 rounded-lg font-normal leading-normal text-md text-grey-900;
+  @apply px-3 py-1.5 border border-grey-500 rounded-lg font-normal leading-normal text-md text-grey-900 hover:border-green-600 active:border-green-600 has-checked:border-green-600;
 }
 
 @utility error-message{
